# hashbench

./: Cargo.toml
benches/: benchmark.rs
src/: main.rs
